# aletheia-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/aletheia_mcp/: __init__.py  server.py
src/aletheia_mcp/sources/: openalex.py  semantic_scholar.py
tests/: smoke.py
